# AresML

./: AUDITORIA_PROGRESO.txt  CMakeLists.txt  OPTIMIZATION_REPORT.md  PROGRESO_IMPLEMENTACION.txt  PROGRESS_REPORT.txt  REPORTE_BREVE.md  RUST_LAYER_BRIEF.md  RUST_LAYER_DESIGN.md  autograd_core_complete.txt  autograd_final_report.txt  autograd_math_engine.txt  autograd_refactor_report.txt  cpu_optimization_report.txt  reporte breve.txt  reporte-breve.txt  test_autograd_gradients.cpp  test_autograd_simple  test_simple_linear
backend/: Backend.cpp  Backend.hpp
backend/cpu/: CPUBackend.hpp
backend_cpu/: Matmul.hpp  Softmax.hpp
core/: Autograd.cpp  Autograd.hpp  Checkpoint.hpp  GraphCompiler.hpp  IREngine.hpp  MemoryEngine.hpp  SafeTensorPool.hpp  ShapeEngine.hpp  StabilityEngine.hpp  Tensor.cpp  Tensor.hpp  TensorPool.hpp
core/compiler_v3/: GraphCompilerV3.hpp  GraphLoweringV3.hpp  PassManagerV3.hpp
core/compiler_v4/: GraphCompilerV4.hpp
core/execution_v3/: ExecutionPlan.hpp
core/fusion/: FusionEngineV2.hpp  FusionGroups.hpp  PatternMatcher.hpp
core/ir_v2/: IRGraphV2.hpp  IRNodeV2.hpp
core/ir_v3/: IRGraphV3.hpp  IRNodeV3.hpp
core/kernel_specialization/: KernelDB.hpp
core/layout_optimizer/: LayoutAnalyzer.hpp
core/memory/: CachePlanner.hpp  MemoryPlan.hpp
core/memory_graph/: MemoryGraphEngine.hpp
core/prefetch/: PrefetchEngine.hpp
core/runtime/: FusedKernelExecutor.hpp
core/runtime_v2/: StaticRuntimeExecutor.hpp
core/runtime_v3/: PlanExecutor.hpp
core/scheduler/: SchedulerV2.hpp
core/simd/: Simd.hpp  SimdKernelsV2.hpp
core/threading/: Parallel.hpp
engine/gpt/: GPTDataset.hpp  GPTEngine.hpp  GPTInference.hpp  GPTTrainer.hpp  Sampling.hpp  Tokenizer.hpp
examples/: debug_train.cpp  test_100.cpp  test_50.cpp  test_attention.cpp  test_attention_full.cpp  test_audit.cpp  test_autograd_core.cpp  test_autograd_simple.cpp  test_block.cpp  test_ce.cpp  test_ce_gradient_debug.cpp  test_ceb.cpp  test_cef.cpp  test_checkpoint.cpp  test_compile_graph.cpp  test_debug.cpp  test_direct.cpp  test_ejemplo.cpp  test_forward.cpp  test_fusion.cpp  test_fusion_v2.cpp  test_gpt_forward.cpp  test_gpt_generation.cpp  test_gpt_overfit.cpp  test_gradient_check.cpp  test_gradient_debug.cpp  test_graph_compiler.cpp  test_linear.cpp  test_logsoftmax_debug.cpp  test_memory_graph.cpp  test_mse.cpp  test_phase17_static.cpp  test_profile.cpp  test_quick.cpp  test_rmsnorm.cpp  test_simd_benchmark.cpp  test_simple.cpp  test_simple_linear.cpp  test_stable.cpp  test_v03.cpp  (+3 more)
ffi/: aresml_ffi.cpp  aresml_ffi.h  ownership_test  ownership_test.cpp  test_ffi  test_ffi.cpp
loss/: CrossEntropy.hpp  MSELoss.hpp
nn/: Attention.hpp  FFN.hpp  LMHead.hpp  Linear.hpp  RMSNorm.hpp  TransformerBlock.hpp
nn/transformer/: CausalMask.hpp  FeedForward.hpp  GPTBlock.hpp  GPTModel.hpp  LayerNorm.hpp  MultiHeadSelfAttention.hpp  PositionalEncoding.hpp  TokenEmbedding.hpp
ops/: Ops.hpp
optim/: Adam.hpp  SGD.hpp
rust_layer/src/: context.rs  error.rs  ffi.rs  lib.rs  linear.rs  tensor.rs
utils/: GradientCheck.hpp  Profiler.hpp  TensorPool.hpp
